[Views] Fix Menu Tooltip and Hover Issue

There was an issue with the menu where if you scroll
down it, the selected item and tooltip doesn't get
updated. This CL address the issue by updating the
selection on a mouse wheel event.

On Mac, there is an issue where the incorrect tooltip
is shown on the menu item. This issue happened because
the tooltip manager doesn't get updated for mouse events
on the Views menu. This CL fixes the issue by calling
-updateTooltipIfRequiredAt: at -scrollWheel: and
-processCapturedMouseEvent:.

Bug: 847966, 847964
Change-Id: I183de9a5a824ab5798957a3432da1962d65b75ca
Reviewed-on: https://chromium-review.googlesource.com/1097739
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566909}
Former-commit-id: 69beedd1cf95cbed38c32c2b8b8fa47569a5e2a4